# birru

./: Cargo.toml  Dockerfile  Procfile  README.md  flake.nix
src/: lib.rs  main.rs
src/adapters/: html_parser.rs  mod.rs  reqwest_downloader.rs
src/domain/: currency.rs  daily_forex_rate.rs  forex_rate.rs  mod.rs
src/entities/: forex_rate.rs  mod.rs
src/impls/: html_parser.rs  reqwest_downloader.rs
src/ports/: downloader.rs  mod.rs  parser.rs
src/traits/: downloader.rs  parser.rs
