[package]
name = "birru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.8", features = ["cookies"]}
scraper = "0.12.0"
async-trait = "0.1.52"